--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="whole30">Whole30</string>
     <string name="apply">APPLY</string>
     <string name="imageview">imageView</string>
+    <string name="search">search</string>
 </resources>
