--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
     <string name="apply">APPLY</string>
     <string name="imageview">imageView</string>
     <string name="search">search</string>
+    <string name="details">Details</string>
+    <string name="viewPager">View Pager</string>
+    <string name="tabLayout">TabLayout</string>
 </resources>
