--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,7 @@
     <string name="viewPager">View Pager</string>
     <string name="tabLayout">TabLayout</string>
     <string name="save_to_favorite">Save to Favorite</string>
+    <string name="no_favorite_recipes">No Favorite Recipes</string>
+    <string name="delete_favorite_menu">delete_favorite_menu</string>
+    <string name="delete_all">Delete All</string>
 </resources>
